fix overflow issues

--- a/butlerv1.0/css/butler.css
+++ b/butlerv1.0/css/butler.css
@@ -29,7 +29,6 @@ body
 
 .inner-container
 {
-    overflow: hidden;
     padding: 12px;
     max-width: 800px;
     margin: auto;
